--- a/appRestauranteWeb/WebContent/Punto de venta/facturaventa.xhtml
+++ b/appRestauranteWeb/WebContent/Punto de venta/facturaventa.xhtml
@@ -10,6 +10,32 @@
 	<title>Facturacion</title>
 </h:head>
 <body>
+	<p:messages autoUpdate="true"></p:messages>
+	<h:outputText value="REY POLLO" style="padding-left: 10px; font-weight: bold; font-size: 175%" />
+	<p:separator />
+	<div align="center">
+		<br />
+		<h:panelGrid columns="3">
+			<p:splitButton value="Inventario">
+				<p:menuitem value="Bodega" url="../Inventario/bodega.xhtml" />
+				<p:menuitem value="Categorías de producto"
+					url="../Inventario/categoriaproducto.xhtml" />
+				<p:menuitem value="Proveedores" url="../Inventario/proveedor.xhtml" />
+			</p:splitButton>
+			<p:splitButton value="Punto de Venta">
+				<p:menuitem value="Clientes" url="cliente.xhtml" />
+				<p:menuitem value="Facturas de Venta" url="facturaventa.xhtml" />
+				<p:menuitem value="Pedidos" url="pedido.xhtml" />
+				<p:menuitem value="Platos" url="plato.xhtml" />
+			</p:splitButton>
+			<p:splitButton value="Caja diaria">
+				<p:menuitem value="Tipo de Transacciones"
+					url="../Caja diaria/tipotransaccion.xhtml" />
+			</p:splitButton>
+		</h:panelGrid>
+	</div>
+	<br />
+	<br />
 	<h2>Facturacion</h2>
 
 	<p:panel id="panel1">
