--- a/appRestauranteWeb/WebContent/login.xhtml
+++ b/appRestauranteWeb/WebContent/login.xhtml
@@ -11,8 +11,6 @@
 </h:head>
 <body>
 	<p:messages autoUpdate="true"></p:messages>
-	<!--<h:outputText value="REY POLLO" style="padding-left: 80px;" />
-	<p:separator />-->
 	<h:panelGrid columns="1" style="margin: 0 auto;">
 		<h:panelGrid style="margin: 0 auto;">
 			<p:graphicImage value="Resource/img/pollo2.png" />
@@ -30,16 +28,16 @@
 				<br />
 				<h:outputText value="Usuario o Email:" style="font-weight: bold" />
 				<br />
-				<p:inputText value="#{controllerUsuario.nombreUsuario}" required="true"
-					requiredMessage="Especifique su usuario o email"
+				<p:inputText value="#{controllerUsuario.nombreUsuario}"
+					required="true" requiredMessage="Especifique su usuario o email"
 					style="width: 100%" />
 				<br />
 				<br />
 				<h:outputText value="Contraseña:" style="font-weight: bold" />
 				<br />
-				<p:inputText value="#{controllerUsuario.passwordUsuario}" required="true"
-					type="password" requiredMessage="Especifique su contraseña"
-					style="width: 100%" />
+				<p:inputText value="#{controllerUsuario.passwordUsuario}"
+					required="true" type="password"
+					requiredMessage="Especifique su contraseña" style="width: 100%" />
 				<br />
 				<div align="right">
 					<h:link value="¿Olvido su contraseña?"
