union y complemento de factura venta con la version del menu de navegacion

--- a/appRestauranteWeb/WebContent/Inventario/bodega.xhtml
+++ b/appRestauranteWeb/WebContent/Inventario/bodega.xhtml
@@ -16,6 +16,7 @@
 		<br />
 		<h:panelGrid columns="3">
 			<p:splitButton value="Inventario">
+				<p:menuitem value="Producto" url="producto.xhtml" />
 				<p:menuitem value="Bodega" url="bodega.xhtml" />
 				<p:menuitem value="Categorías de producto"
 					url="categoriaproducto.xhtml" />
