--- a/appRestauranteWeb/WebContent/Punto de venta/facturaventa.xhtml
+++ b/appRestauranteWeb/WebContent/Punto de venta/facturaventa.xhtml
@@ -17,6 +17,7 @@
 		<br />
 		<h:panelGrid columns="3">
 			<p:splitButton value="Inventario">
+				<p:menuitem value="Producto" url="../Inventario/producto.xhtml" />
 				<p:menuitem value="Bodega" url="../Inventario/bodega.xhtml" />
 				<p:menuitem value="Categorías de producto"
 					url="../Inventario/categoriaproducto.xhtml" />
