--- a/appRestauranteWeb/WebContent/Punto de venta/pedido.xhtml
+++ b/appRestauranteWeb/WebContent/Punto de venta/pedido.xhtml
@@ -5,10 +5,13 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:p="http://primefaces.org/ui">
 
-<h:head></h:head>
+<h:head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<title>Pedido</title>
+</h:head>
 <body>
-	<p:messages autoUpdate="true"></p:messages>
-	<h:outputText value="REY POLLO" style="padding-left: 10px; font-weight: bold; font-size: 175%" />
+	<h:outputText value="REY POLLO"
+		style="padding-left: 10px; font-weight: bold; font-size: 175%" />
 	<p:separator />
 	<div align="center">
 		<br />
@@ -21,11 +24,10 @@
 				<p:menuitem value="Proveedores" url="../Inventario/proveedor.xhtml" />
 			</p:splitButton>
 			<p:splitButton value="Punto de Venta">
-				<p:menuitem value="Clientes" url="../Punto de venta/cliente.xhtml" />
-				<p:menuitem value="Facturas de Venta"
-					url="../Punto de venta/facturaventa.xhtml" />
-				<p:menuitem value="Pedidos" url="../Punto de venta/pedido.xhtml" />
-				<p:menuitem value="Platos" url="../Punto de venta/plato.xhtml" />
+				<p:menuitem value="Clientes" url="cliente.xhtml" />
+				<p:menuitem value="Facturas de Venta" url="facturaventa.xhtml" />
+				<p:menuitem value="Pedidos" url="pedido.xhtml" />
+				<p:menuitem value="Platos" url="plato.xhtml" />
 			</p:splitButton>
 			<p:splitButton value="Caja diaria">
 				<p:menuitem value="Tipo de Transacciones"
@@ -35,27 +37,106 @@
 	</div>
 	<br />
 	<br />
-	<h:form>
-		<p:panel>
-			<h:outputText value="cantidad" />
-			<p:inputText value="#{controllerPedido.cantidad}" />
-			<h:outputText value="producto" />
-			<p:inputText value="#{controllerPedido.idproducto}" />
-			<h:outputText value="plato" />
-			<p:inputText value="#{controllerPedido.idplato}" />
-			<p:commandButton value="Agregar detalle"
-				actionListener="#{controllerPedido.AgregarDetalle()}" update="@form"></p:commandButton>
 
-			<p:dataTable
-				value="#{controllerPedido.pedidoTemp.tabVtsDetallePedidos}" var="d">
-				<p:column headerText="PK detalle"></p:column>
-				<h:outputText value="#{d.iddetallepedido}" />
-				<p:column headerText="CANTIDAD"></p:column>
-				<h:outputText value="#{d.cantidaddetallepedido}" />
-				<p:column headerText="NOMBRE PRODUCTO"></p:column>
-				<h:outputText value="#{d.valorunitariodetallepedido}" />
-			</p:dataTable>
-		</p:panel>
-	</h:form>
+	<p:panel id="panel1">
+		<h:form id="form2">
+			<p:panel header="Datos del Pedido">
+				<p:panelGrid columns="2">
+					<h:outputText value="Nro. de Pedido:" style="font-weight: bold" />
+					<h:outputText value="#{controllerPedido.pedidoTmp.idpedido}" />
+					<h:outputText value="Fecha del pedido:" style="font-weight: bold" />
+					<h:outputText value="#{controllerPedido.pedidoTmp.fechapedido}">
+						<f:convertDateTime pattern="dd/MM/yyyy HH:mm:ss" />
+					</h:outputText>
+					<h:outputText value="Seleccione la mesa:" style="font-weight: bold" />
+					<p:inputText value="#{controllerPedido.mesa}"></p:inputText>
+					<h:commandButton value="Guardar factura"
+						action="#{controllerPedido.guardarPedido()}" />
+					<p:messages id="mensajes" />
+					<h:commandButton value="Imprimir" type="button"
+						icon="ui-icon-print">
+						<p:printer target=":panel1" />
+					</h:commandButton>
+				</p:panelGrid>
+			</p:panel>
+		</h:form>
+		<h:form id="form3">
+			<p:panel header="Detalle de productos">
+				<p:panelGrid columns="5" border="1">
+					<h:outputText value="Plato:" />
+					<h:selectOneMenu value="#{controllerPedido.idplato}">
+						<f:selectItem itemLabel="Seleccione un plato..." itemValue="-1" />
+						<f:selectItems value="#{controllerPedido.listaPlatoSI}" />
+						<p:ajax update="mensajes2"></p:ajax>
+					</h:selectOneMenu>
+					<h:outputText value="Cantidad:" />
+					<h:inputText value="#{controllerPedido.cantidad}" />
+					<p:commandButton value="adicionar"
+						action="#{controllerPedido.insertarDetalle()}" update="form3"
+						icon="ui-icon-plusthick" />
+				</p:panelGrid>
+				<p:messages id="mensajes2"></p:messages>
+				<p:dataTable
+					value="#{controllerPedido.pedidoTmp.tabVtsDetallePedidos}" var="d"
+					id="tablaFacturaDets">
+					<f:facet name="header">
+						<h:outputText value="Detalle de platos:" />
+					</f:facet>
+
+					<p:column style="width:40px">
+						<f:facet name="header">
+					CANT
+				</f:facet>
+						<h:outputText value="#{d.cantidaddetallepedido}" />
+					</p:column>
+					<p:column>
+						<f:facet name="header">
+					PRODUCTO
+				</f:facet>
+						<h:outputText value="#{d.tabVtsPlato.nombreplato}" />
+					</p:column>
+					<p:column>
+						<f:facet name="header">
+					DESCRIPCION
+				</f:facet>
+						<h:outputText value="#{d.tabVtsPlato.descripccionplato}" />
+					</p:column>
+					<p:column style="width:100px">
+						<f:facet name="header">
+					P.Unit
+				</f:facet>
+						<h:outputText value="#{d.valorunitariodetallepedido}" />
+
+						<f:facet name="footer">
+							<h:panelGrid columns="1"
+								style="font-weight: bold; text-align:right">
+								<h:outputText value="TOTAL:" />
+							</h:panelGrid>
+						</f:facet>
+					</p:column>
+
+					<p:column style="width:120px;text-align:right">
+						<f:facet name="header">
+					P.Total
+				</f:facet>
+						<h:outputText value="#{d.valorTotaldetallepedido}"
+							maxFractionDigits="2" minFractionDigits="2"
+							style="text-align:right" />
+						<f:facet name="footer">
+							<h:panelGrid columns="1"
+								style="font-weight: bold; text-align:right">
+
+								<h:outputText value="#{controllerPedido.pedidoTmp.total}">
+									<f:convertNumber maxFractionDigits="2" minFractionDigits="2"
+										currencySymbol="$" />
+								</h:outputText>
+							</h:panelGrid>
+						</f:facet>
+					</p:column>
+				</p:dataTable>
+			</p:panel>
+		</h:form>
+	</p:panel>
+
 </body>
 </html>
