Se agrego funcionalidad a las sesiones y su cierre respectivo. Se agrego breadcrums a todas las páginas.

--- a/appRestauranteWeb/WebContent/bodeguero/inventario/bodega.xhtml
+++ b/appRestauranteWeb/WebContent/bodeguero/inventario/bodega.xhtml
@@ -4,13 +4,29 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:p="http://primefaces.org/ui">
-
+<f:metadata>
+	<f:event listener="#{controllerUsuario.actionComprobarLogin()}"
+		type="preRenderView"></f:event>
+</f:metadata>
 <h:head>
 	<title>Bodegas</title>
 </h:head>
 <h:body>
 	<p:messages autoUpdate="true"></p:messages>
-	<h:outputText value="REY POLLO" style="padding-left: 10px; font-weight: bold; font-size: 175%" />
+	<div>
+		<div align="left">
+			<h:outputText value="REY POLLO"
+				style="padding-left: 10px; font-weight: bold; font-size: 175%; float: left" />
+		</div>
+		<div align="right" style="float: right">
+			<h:form>
+				<p:commandLink action="#{controllerUsuario.actionSalir()}"
+					value="Cerrar sesión" style="text-align: right; font-size: 150%"></p:commandLink>
+			</h:form>
+		</div>
+	</div>
+	<br />
+	<br />
 	<p:separator />
 	<div align="center">
 		<br />
@@ -21,19 +37,15 @@
 					url="categoriaproducto.xhtml" />
 				<p:menuitem value="Proveedores" url="proveedor.xhtml" />
 			</p:splitButton>
-			<p:splitButton value="Punto de Venta">
-				<p:menuitem value="Clientes" url="../Punto de venta/cliente.xhtml" />
-				<p:menuitem value="Facturas de Venta"
-					url="../Punto de venta/facturaventa.xhtml" />
-				<p:menuitem value="Pedidos" url="../Punto de venta/pedido.xhtml" />
-				<p:menuitem value="Platos" url="../Punto de venta/plato.xhtml" />
-			</p:splitButton>
-			<p:splitButton value="Caja diaria">
-				<p:menuitem value="Tipo de Transacciones"
-					url="../Caja diaria/tipotransaccion.xhtml" />
-			</p:splitButton>
 		</h:panelGrid>
 	</div>
+	<br />
+	<br />
+	<p:breadCrumb>
+		<p:menuitem value="Inventario" url="#" />
+		<p:menuitem value="Inventario" url="#" />
+		<p:menuitem value="Bodega" url="#" />
+	</p:breadCrumb>
 	<br />
 	<br />
 	<h:panelGrid columns="2">
