--- a/appRestauranteWeb/WebContent/admin/puntodeventa/facturaventa.xhtml
+++ b/appRestauranteWeb/WebContent/admin/puntodeventa/facturaventa.xhtml
@@ -4,23 +4,39 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:p="http://primefaces.org/ui">
-
+<f:metadata>
+	<f:event listener="#{controllerUsuario.actionComprobarLogin()}"
+		type="preRenderView"></f:event>
+</f:metadata>
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>Facturacion</title>
 </h:head>
 <body>
 	<p:messages autoUpdate="true"></p:messages>
-	<h:outputText value="REY POLLO" style="padding-left: 10px; font-weight: bold; font-size: 175%" />
+	<div>
+		<div align="left">
+			<h:outputText value="REY POLLO"
+				style="padding-left: 10px; font-weight: bold; font-size: 175%; float: left" />
+		</div>
+		<div align="right" style="float: right">
+			<h:form>
+				<p:commandLink action="#{controllerUsuario.actionSalir()}"
+					value="Cerrar sesión" style="text-align: right; font-size: 150%"></p:commandLink>
+			</h:form>
+		</div>
+	</div>
+	<br />
+	<br />
 	<p:separator />
 	<div align="center">
 		<br />
 		<h:panelGrid columns="3">
 			<p:splitButton value="Inventario">
-				<p:menuitem value="Bodega" url="../Inventario/bodega.xhtml" />
+				<p:menuitem value="Bodega" url="../inventario/bodega.xhtml" />
 				<p:menuitem value="Categorías de producto"
-					url="../Inventario/categoriaproducto.xhtml" />
-				<p:menuitem value="Proveedores" url="../Inventario/proveedor.xhtml" />
+					url="../inventario/categoriaproducto.xhtml" />
+				<p:menuitem value="Proveedores" url="../inventario/proveedor.xhtml" />
 			</p:splitButton>
 			<p:splitButton value="Punto de Venta">
 				<p:menuitem value="Clientes" url="cliente.xhtml" />
@@ -30,10 +46,17 @@
 			</p:splitButton>
 			<p:splitButton value="Caja diaria">
 				<p:menuitem value="Tipo de Transacciones"
-					url="../Caja diaria/tipotransaccion.xhtml" />
+					url="../cajadiaria/tipotransaccion.xhtml" />
 			</p:splitButton>
 		</h:panelGrid>
 	</div>
+	<br />
+	<br />
+	<p:breadCrumb>
+		<p:menuitem value="Punto de Venta" url="#" />
+		<p:menuitem value="Punto de Venta" url="#" />
+		<p:menuitem value="Facturas de Venta" url="#" />
+	</p:breadCrumb>
 	<br />
 	<br />
 	<h2>Facturacion</h2>
