Se agregó cruds de usuarios y falta corregir un error de persistencia y ya esta funcional el CRUD de caja diaria. También se elimino el Managerlogin y se lo unificó con ManagerUsuario.

--- a/appRestauranteWeb/WebContent/admin/cajadiaria/tipotransaccion.xhtml
+++ b/appRestauranteWeb/WebContent/admin/cajadiaria/tipotransaccion.xhtml
@@ -48,6 +48,7 @@
 			<p:splitButton value="Caja diaria">
 				<p:menuitem value="Tipo de Transacciones"
 					url="tipotransaccion.xhtml" />
+				<p:menuitem value="Caja Diaria" url="cajadiaria.xhtml" />
 			</p:splitButton>
 		</h:panelGrid>
 	</div>
